bpo-36370: Check for PyErr_Occurred() after PyImport_GetModule() (GH-12504)